# md-evals

./: .gitignore  .mutmut.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW_INDEX.md  CONTRIBUTING.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_COMPLETION_SUMMARY.md  DOCUMENTATION_DEPLOYMENT_GUIDE.md  DOCUMENTATION_VERIFICATION_REPORT.md  GITHUB_MODELS_INTEGRATION_FINAL_REPORT.md  LICENSE  MUTATION_TESTING_FINAL_REPORT.md  MUTATION_TESTING_INDEX.md  MUTATION_TESTING_LESSONS_LEARNED.md  MUTATION_TESTING_REPORT.md  Makefile  PHASE10_PLANNING.md  PHASE4A_E2E_TESTS_REPORT.md  PHASE4B_ADVANCED_INTEGRATION_TESTS_REPORT.md  PHASE7_PARALLEL_EXECUTION_REPORT.md  PHASE9C_IMPLEMENTATION_COMPLETE.md  PHASE9C_INDEX.md  PHASE9C_MUTATION_ANALYSIS_REPORT.md  PHASE9C_SUMMARY.md  PHASE9D_COMPLETION_SUMMARY.md  PHASE9_MUTATION_TESTING_REPORT.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  TEST_IMPROVEMENT_PLAN.md  TEST_REFINEMENT_IMPLEMENTATION.md  TUI_FRAMEWORK_ANALYSIS.md  coverage.json  coverage.xml  pyproject.toml  pytest.ini
.github/: VALIDATION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md
.github/workflows/: docs.yml  test-parallel.yml
docs/: README.md  TESTING.md  TEST_ARCHITECTURE.md  TEST_CI_INTEGRATION.md  TEST_COVERAGE_ANALYSIS.md  TEST_DEVELOPMENT_GUIDE.md  TEST_QUICK_REFERENCE.md  _coverpage.md  _sidebar.md  index.html
docs/examples/: basic-evaluation.md  github-models-evaluation.md  llm-judge.md  multi-treatment.md  results-analysis.md  wildcards.md
docs/guide/: advanced.md  configuration.md  evaluators.md  getting-started.md  github-models-setup.md  linting.md  quick-start.md  treatments.md
docs/reference/: cli-commands.md  environment.md  exit-codes.md  github-models-models.md  yaml-schema.md
docs/troubleshooting/: common-issues.md  faq.md  github-models-issues.md
examples/: eval_with_github_models.yaml  reasoning_skill.md
md_evals/: __init__.py  cli.py  config.py  engine.py  evaluator.py  linter.py  llm.py  models.py  provider_registry.py  reporter.py  utils.py
md_evals/providers/: __init__.py  github_models.py
mutants/: mutmut-cicd-stats.json  mutmut-stats.json  pyproject.toml  pytest.ini
mutants/md_evals/: __init__.py  cli.py  config.py  engine.py  evaluator.py  linter.py  llm.py  models.py  provider_registry.py  reporter.py  utils.py
mutants/md_evals/providers/: __init__.py  github_models.py
mutants/tests/: test_e2e_workflow.py  test_engine.py  test_evaluator.py  test_github_models_provider.py  test_linter.py  test_llm.py  test_performance.py  test_provider_registry.py  test_reporter.py  test_utils.py
mutants/tests/fixtures/: eval.yaml
openspec/: docs-proposal.md  docs-tasks.md  proposal.md
openspec/archive/2026-03-10-docs/: design.md  spec.md  verify-report.md
openspec/archive/github-models-integration/: ARCHIVE_SUMMARY.md  IMPLEMENTATION_REFERENCE.md  PHASE_2_DOCUMENTATION_SUMMARY.md  PHASE_3_QUICK_REFERENCE.md  design.md  proposal.md  spec.md  tasks.md  verify-report.md
openspec/archive/mutations/: EDGE_CASE_TEST_REVIEW.md  MUTATION_TESTING_VERIFICATION_REPORT.md  MUTATION_TEST_IMPLEMENTATION.md
openspec/archive/test-quality/: EXECUTIVE_SUMMARY.md  MUTATION_TESTING_ANALYSIS.md  PHASE4B_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_PERFORMANCE_REPORT.md  PHASE6_CONFIG_REPORT.md  PHASE8_DOCUMENTATION_REPORT.md  PHASE9C_IMPLEMENTATION_ROADMAP.md  PHASE9_SUMMARY.md  PHASES_5-8_FINAL_COMPLETION_REPORT.md  README.md  TEST_AUDIT_REPORT.md
openspec/archive/test-refinement/: REVIEW_SUMMARY.txt
openspec/changes/archive/2026-03-11-md-evals/: ARCHIVE_SUMMARY.md  design.md  spec.md  tasks.md
reports/: test_report.html
tests/: conftest.py  test_cli.py  test_config.py  test_e2e_workflow.py  test_engine.py  test_evaluator.py  test_github_models_provider.py  test_llm.py  test_reporter.py
tests/fixtures/: skill_long.md  skill_short.md
