[project]
name = "md-evals"
version = "0.1.0"
description = "Lightweight CLI tool for evaluating AI skills (SKILL.md) with Control vs Treatment testing using LiteLLM"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Javier Zader", email = "javier@example.com" }
]
keywords = ["ai", "llm", "evaluation", "skills", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "litellm>=1.40.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "azure-ai-inference>=1.0.0b9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "pytest-timeout>=2.1.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.3.0",
    "coverage[toml]>=7.4.0",
    "mutmut>=3.5.0",
    "hypothesis>=6.75.0",
]
github-models = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
md-evals = "md_evals.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.typer]
pretty_width = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage settings
addopts = [
    "--cov=md_evals",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-report=json:coverage.json",
    "--cov-branch",
    "--strict-markers",
    "-v",
    "--tb=short",
    "--durations=10",
]

# Phase 7: Parallel Execution with pytest-xdist
# Uncomment line below to enable parallel execution by default
# addopts includes: -n auto
# Run: pytest tests/ -n 4  (recommended: 4 workers, 73% faster)
# Or: pytest tests/ -n auto (auto-detect CPU cores)
# Or: pytest tests/ (serial, for debugging)

# Coverage thresholds
# Uncomment to enforce minimum coverage in CI
# [tool.coverage.report]
# fail_under = 96

[tool.coverage.run]
source = ["md_evals"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__main__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if (typing\\.)?TYPE_CHECKING:",
    "class .*\\(Protocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
